# dwarfworks

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format  dwarfworks.sln  imgui.ini  premake5.lua
Dwarfworks/: CMakeLists.txt  cpp.hint
Dwarfworks/Source/: Dwarfworks.h  dwpch.cpp  dwpch.h
Dwarfworks/Source/Dwarfworks/Core/: CompilerWarningsHelper.h  Core.cpp  Core.h  EntryPoint.h  Timestep.h
Dwarfworks/Source/Dwarfworks/Core/App/: Application.cpp  Application.h
Dwarfworks/Source/Dwarfworks/Core/Application/: Application.cpp  Application.h
Dwarfworks/Source/Dwarfworks/Core/EventSystem/: Event.h  EventDispatcher.h
Dwarfworks/Source/Dwarfworks/Core/EventSystem/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h  UncategorizedEvent.h
Dwarfworks/Source/Dwarfworks/Core/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  EventManager.h  KeyEvent.h  MouseEvent.h
Dwarfworks/Source/Dwarfworks/Core/Input/: Input.h  KeyCodeDefinitions.h  KeyCodes.h  MouseButtonCodes.h  MouseButtonDefinitions.h
Dwarfworks/Source/Dwarfworks/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Dwarfworks/Source/Dwarfworks/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Dwarfworks/Source/Dwarfworks/Core/Log/: Log.cpp  Log.h
Dwarfworks/Source/Dwarfworks/Core/Logging/: Log.cpp  Log.h
Dwarfworks/Source/Dwarfworks/Core/Threading/: TaskGenerator.cpp  TaskGenerator.h  TaskList.cpp  TaskList.h  ThreadManager.cpp  ThreadManager.h
Dwarfworks/Source/Dwarfworks/Core/Window/: IWindow.h  Window.cpp  Window.h
Dwarfworks/Source/Dwarfworks/DebugUI/: DebugUIBuild.cpp  DebugUILayer.cpp  DebugUILayer.h
Dwarfworks/Source/Dwarfworks/Event/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  EventDispatcher.h  EventManager.cpp  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
Dwarfworks/Source/Dwarfworks/Events/: ApplicationEvent.h  Event.h  EventManager.h  KeyEvent.h  MouseEvent.h
Dwarfworks/Source/Dwarfworks/Factories/: ShaderFactory.cpp  ShaderFactory.h
Dwarfworks/Source/Dwarfworks/Graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsInterface.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Dwarfworks/Source/Dwarfworks/Math/: Math.cpp  Math.h
Dwarfworks/Source/Dwarfworks/Platform/OpenGL/: DebugUIOpenGLRenderer.cpp  DebugUIOpenGLRenderer.h  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLRendererAPI.h  OpenGLVertexArray.h
Dwarfworks/Source/Dwarfworks/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Dwarfworks/Source/Dwarfworks/Renderer/: Adapter.cpp  Adapter.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Dwarfworks/Source/Dwarfworks/Renderer/2D/: Renderer2D.cpp  Renderer2D.h
Dwarfworks/Source/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Dwarfworks/Source/Platform/Mac/: MacInput.cpp  MacInput.h  MacWindow.cpp  MacWindow.h  MacWindow.mm
Dwarfworks/Source/Platform/OpenGL/: OpenGLAdapter.cpp  OpenGLAdapter.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDriver.cpp  OpenGLDriver.h  OpenGLError.h  OpenGLLoader.cpp  OpenGLLoader.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUtil.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Dwarfworks/Source/Platform/OpenGL/Mac/: MacOpenGLDriver.cpp
Dwarfworks/Source/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Dwarfworks/Source/Testing/: Test.cpp  Test.h
Dwarfworks/Source/Testing/OpenGLTests/: OpenGLClearColorTest.cpp  OpenGLClearColorTest.h  OpenGLInfoTest.cpp  OpenGLInfoTest.h  OpenGLRenderTriangleTest.cpp  OpenGLRenderTriangleTest.h  OpenGLShaderManagerTest.cpp  OpenGLShaderManagerTest.h  ShaderManagerTest.cpp  ShaderManagerTest.h
Dwarfworks/Source/Testing/OpenGLTests/GLSLShaders/: TestShader1.frag  TestShader2.vert
Dwarfworks/Source/Tests/: OpenGLClearColorTest.cpp  OpenGLClearColorTest.h  OpenGLInfoTest.cpp  OpenGLInfoTest.h  OpenGLRenderTriangleTest.cpp  OpenGLRenderTriangleTest.h  ShaderManagerTest.cpp  ShaderManagerTest.h  Test.cpp  Test.h  TestMenu.cpp  TestMenu.h  tpch.cpp  tpch.h
Dwarfworks/Source/Tests/TestShaders/: TestShader1.frag  TestShader1.vert  TestShader2.frag  TestShader2.vert
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/Assets/Shaders/: Basic.glsl  FlatColor.glsl  Texture.glsl
Sandbox/Source/: Basic3D.cpp  Basic3D.h  Common.h  Playground.cpp  Playground.h  Sandbox.cpp  Sandbox.h  SandboxLayer.cpp  SandboxLayer.h
Scripts/: Win-GenProjects.bat
dwarfworks/: EntryPoint.cpp  EntryPoint.h  dwarfworks.vcxproj  dwarfworks.vcxproj.filters
dwarfworks/Source/: Dwarfworks.h
dwarfworks/Source/Dwarfworks/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
dwarfworks/Source/Dwarfworks/Core/App/: Application.cpp  Application.h
dwarfworks/Source/Dwarfworks/Core/EventSystem/: Event.h  EventDispatcher.h
dwarfworks/Source/Dwarfworks/Core/EventSystem/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h  UncategorizedEvent.h
dwarfworks/Source/Dwarfworks/Core/Logging/: Log.cpp  Log.h
dwarfworks/src/: dwarfworks.h
dwarfworks/src/core/: application.cpp  application.h  core.h  entry_point.h
dwarfworks/src/dwarfworks/: application.cpp  application.h  core.h  entry_point.h  log.cpp  log.h
sandbox/: sandbox.vcxproj  sandbox.vcxproj.filters
sandbox/Source/: Sandbox.cpp
sandbox/src/: sandbox.cpp
